2.4.4 Released ?? August 2019

* Classes mglFormula and mglFormulaC now can read file with given sizes if string have the format ":fname:x1:x2:y1:y2:z1:z2". Here data is supposed in range [x1,x2]*[y1,y2]*[z1,z2] (by default [0,1]*[0,1]*[0,1]). Calc() in this case return the interpolated values

* Fix [xyz]range option for Area and Region.

2.4.3 Released 14 March 2019

* Add 'clabel' command -- draw labels for colorbar. Should be used *after* drawing colorbar!
* Extend 'ctick' command
* Add subpixel smoothing for masks
* Boxes around text (style '@') now use actual height and position of the text.
* Add mask to EPS export. Note, mask angles are reduced to 45*(0,1,...7) degrees for decreasing pattern size in the EPS.
* Update default masks: '*' become dot, '^' become bricks, 'd' become plus, 'D' become tacks, ';' and 'j' change lengths. Note, you can use brush.ods to prepare user-defined masks.
* Add styles '^' and '_' for command 'smooth' to find upper/lower bound of the data.
* Improve FlowP() to draw both branches (in positive and negative time direction).
* Improve CGI interface and update website.
* Introduce struct mdual as interface for C and C++ complex numbers. It is implicitly converted to std::complex<> in C++. And need to call c2mdual() and mdual2c() in pure C. However mdual is binary compatible with C _Complex numbers.
* Add flag in CMake to manually disable support of C99 complex numbers.
* Bypass user-specified extension in base font family name.
* Improve hints in mgllab and udav.
* Add utility 'mgltask' for making output file with a set of copies of mask-file. It useful for making set of initial conditions with a few parameters varied in specified range.
* Add example of OpenGL output.
* Bugfix for approximate min and max position.
* Bugfix for position of SVG output.
* Compatibility fixes for new versions of CMake, compilers and libraries.
INCOMPATIBLE: